# tws-client

./: .clangd  .gitignore  CMakeLists.txt  Makefile  cmake_uninstall.cmake.in  run_single_test.sh
app/: CMakeLists.txt  main.cpp
include/: AccountSummaryTags.h  AvailableAlgoParams.h  ClientWrapper.h  ContractRequestBuilder.h  FAMethodSamples.h  OrderSamples.h  ScannerSubscriptionSamples.h  TwsClient.h
src/: AccountSummaryTags.cpp  AvailableAlgoParams.cpp  CMakeLists.txt  ContractRequestBuilder.cpp  OrderSamples.cpp  ScannerSubcriptionSamples.cpp  TwsClient.cpp  Utils.cpp
tests/: CMakeLists.txt  ContractBuilderTest.cpp  SingleActionTest.cpp
